docs: polish readmes

--- a/examples/latex/slides.tex
+++ b/examples/latex/slides.tex
@@ -33,3 +33,10 @@ theory MyTheory =
 		Use the inline verbatim command \verb|\mmtinline/.../| to produce inline code: \mmtinline/theory MyTheory = ℕ : type ❙ succ : ℕ ⟶ℕ ❘ # S 1❙❚/
 	\end{frame}
 \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-command-extra-options: "-shell-escape -8bit"
+%%% TeX-master: t
+%%% End:
