--- a/examples/latex/main.tex
+++ b/examples/latex/main.tex
@@ -33,3 +33,11 @@ theory MyTheory =
 	\section{Inline Code}
 	Use the inline verbatim command \verb|\mmtinline/.../| to produce inline code: \mmtinline/theory MyTheory = ℕ : type ❙ succ : ℕ ⟶ℕ ❘ # S 1❙❚/
 \end{document}
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-engine: xetex
+%%% TeX-command-extra-options: "-shell-escape -8bit"
+%%% TeX-master: t
+%%% End:
